--- a/server/package.json
+++ b/server/package.json
@@ -41,6 +41,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
     "@types/pg": "^8.11.10",
     "@types/sequelize": "^4.28.20",
