implemented Auth and Role Guards

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -16,6 +16,7 @@
       "@filters": ["./src/filters"],
       "@decorators": ["./src/decorators"],
       "@guards": ["./src/guards"],
+      "@utils": ["./src/utils"],
     },
     "incremental": true,
     "skipLibCheck": true,
