--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -12,7 +12,7 @@
     "baseUrl": "./",
     "paths": {
       "@config": ["./src/config"],
-      "@modules": ["./src/modules"],
+      "@modules": ["src/modules"],
       "@filters": ["./src/filters"],
       "@decorators": ["./src/decorators"],
       "@guards": ["./src/guards"],
