unit test controller and service

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -11,12 +11,12 @@
     "outDir": "./dist",
     "baseUrl": "./",
     "paths": {
-      "@config": ["./src/config"],
+      "@config": ["src/config"],
       "@modules": ["src/modules"],
-      "@filters": ["./src/filters"],
-      "@decorators": ["./src/decorators"],
-      "@guards": ["./src/guards"],
-      "@utils": ["./src/utils"],
+      "@filters": ["src/filters"],
+      "@decorators": ["src/decorators"],
+      "@guards": ["src/guards"],
+      "@utils": ["src/utils"],
     },
     "incremental": true,
     "skipLibCheck": true,
